--- a/libs/waterfall/src/lib/components/right-holder-add/right-holder-add.component.html
+++ b/libs/waterfall/src/lib/components/right-holder-add/right-holder-add.component.html
@@ -25,9 +25,15 @@
       </ng-template>
     </algolia-chips-autocomplete>
 
-    <static-select [control]="form.get('roles')" multiple scope="rightholderRoles">
+    <static-select *ngIf="isProducer else notProducer" [control]="form.get('roles')" multiple scope="rightholderRoles"> 
       <mat-label>Waterfall Role *</mat-label>
     </static-select>
+
+    <ng-template #notProducer>
+      <static-select [control]="form.get('roles')" multiple scope="rightholderRoles" [only]="['producer']"> 
+        <mat-label>Waterfall Role *</mat-label>
+      </static-select>
+    </ng-template>
 
     <div>
       <button mat-flat-button color="primary" [disabled]="form.invalid || (isSending$ | async)" (click)="invite()">
