--- a/apps/waterfall/waterfall/src/app/dashboard/title/edit/edit.component.scss
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/edit/edit.component.scss
@@ -4,6 +4,12 @@
   padding: 48px 24px;
 }
 
+article {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 section {
   display: flex;
   flex-direction: row;
