--- a/libs/waterfall/src/lib/components/form/form.component.html
+++ b/libs/waterfall/src/lib/components/form/form.component.html
@@ -38,7 +38,7 @@
     [meta]="['movies', 'poster', movieId]"
     ratio="poster"
     [form]="movieForm.poster"
-    listenToChanges
+    [listenToChanges]="edit"
   >
     <h3 title>Movie Poster</h3>
   </image-uploader>
@@ -49,7 +49,7 @@
 
   <mat-form-field appearance="outline">
     <mat-label>Production Status</mat-label>
-    <mat-select [formControl]="waterfallForm" required multiple>
+    <mat-select [formControl]="waterfallRoleControl" required multiple>
       <mat-option *ngFor="let role of rightholderRoles | keyvalue" [value]="role.key">
         {{ role.value }}
       </mat-option>
