added scroll to top for title & org pages (cross app)

--- a/apps/catalog/catalog/src/app/marketplace/title/view/view.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/view/view.component.html
@@ -1,3 +1,4 @@
+<span id="top"></span>
 <ng-container *ngIf="movie$ | async as movie">
   <title-marketplace-shell [routes]="navLinks">
     <movie-header [movie]="movie">
