--- a/apps/festival/festival/src/app/marketplace/organization/view/view.component.html
+++ b/apps/festival/festival/src/app/marketplace/organization/view/view.component.html
@@ -1,3 +1,4 @@
+<span id="top"></span>
 <ng-container *ngIf="org$ | async as org">
   <org-view [org]="org" [navLinks]="navLinks">
     <ng-container *ngIf="org.email && !isAnonymous">
