added more rights, excluded from catalog

--- a/libs/contract/src/lib/avails/filter/filter.component.html
+++ b/libs/contract/src/lib/avails/filter/filter.component.html
@@ -22,6 +22,7 @@
     [formControl]="medias"
     [disabled]="disabled"
     scope="medias"
+    [withoutValues]="['Theatrical']"
     displayAll="All Rights"
     required
     placeholder="Specify right(s) to filter"
