Filters : Genre / Languages / Festivals update (#9347)
* fix issue #9064

* E2E test related to issue #9064

* temporary rive fix

* fix issue #9288

* remove rive temporary fix

* faker quickfix

* fix PR comments + advancedSyntax in algolia

* "Restrict Search" instead of "Search by..."

* updated appversion (#9303)

Co-authored-by: bruce <delorme.bruce.michel@gmail.com>

* fix PR comments + adapt to new search needs

* fix titleCase

* after checking the db, no need for retrocompatibility

* algolia upgrade

* fix PR comment

* mvp - continents in url for avails filter

* reordering and harmonizing territories

* using ISOA2 in availsFilter

* adjusting types

* added encoding for originCountries filter

* fix unit test

* fix @rive-app/canvas-advanced (#9312)

Co-authored-by: bruce <delorme.bruce.michel@gmail.com>

* fixed typo

* cleaned typing & fixed bugs

* revert territories

* typo

* cleaning

* cleaning

* added back martinique

* fixed e2e tests

* e2e fix

* Nicolas/quickfixes (#9311)

* mvp - continents in url for avails filter

* Bump vm2 from 3.9.16 to 3.9.17 (#9307)

Bumps [vm2](https://github.com/patriksimek/vm2) from 3.9.16 to 3.9.17.
- [Release notes](https://github.com/patriksimek/vm2/releases)
- [Changelog](https://github.com/patriksimek/vm2/blob/master/CHANGELOG.md)
- [Commits](https://github.com/patriksimek/vm2/compare/3.9.16...3.9.17)

---
updated-dependencies:
- dependency-name: vm2
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* reordering and harmonizing territories

* using ISOA2 in availsFilter

* adjusting types

* added encoding for originCountries filter

* fix unit test

* fixed typo

* cleaned typing & fixed bugs

* revert territories

* typo

* cleaning

* cleaning

* added back martinique

* fixed e2e

--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -38,9 +38,13 @@
     </ng-template>
 
     <ng-template filter label="Genre" [form]="searchForm.genres">
-      <chips-autocomplete [form]="searchForm.genres" scope="genres" test-id="genre">
-        <mat-label>Genre</mat-label>
-      </chips-autocomplete>
+      <scope-multiselect
+        scope="genres"
+        label="Select Genres"
+        selectIcon="style"
+        filterPlaceholder="Specify genre to filter"
+        [control]="searchForm.genres">
+      </scope-multiselect>
     </ng-template>
 
     <ng-template filter label="Country of Origin" [form]="searchForm.originCountries">
@@ -70,9 +74,13 @@
     </ng-template>
 
     <ng-template filter label="Festival Selection" [form]="searchForm.festivals">
-      <static-check-boxes fxLayout="column" fxLayoutGap="12px" [form]="searchForm.festivals"
-        scope="festival">
-      </static-check-boxes>
+      <scope-multiselect
+        scope="festival"
+        label="Select Festivals"
+        selectIcon="social_leaderboard"
+        filterPlaceholder="Specify festival to filter"
+        [control]="searchForm.festivals">
+      </scope-multiselect>
     </ng-template>
 
     <ng-template filter label="Qualifications" [form]="searchForm.certifications">
