--- a/apps/waterfall/waterfall/src/app/dashboard/title/sales/sales.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/sales/sales.component.html
@@ -35,7 +35,7 @@
     <article *ngIf="hoveredTerritory" class="territory-card hovered-territory-card">
       <ul>
         <li><b>{{ hoveredTerritory.name }}</b></li>
-        <li class="mat-caption">{{ hoveredTerritory.orgName }}</li>
+        <li class="mat-caption">{{ hoveredTerritory.data }}</li>
       </ul>
     </article>
 
