--- a/apps/crm/crm/src/app/crm/pages/offers/shell/contract-view/contract-view.component.html
+++ b/apps/crm/crm/src/app/crm/pages/offers/shell/contract-view/contract-view.component.html
@@ -57,7 +57,7 @@
             [queryParams]="{termIndex:index}">
             <mat-icon svgIcon="visibility"></mat-icon>
           </a>
-          <button mat-icon-button matTooltip="Delete" (click)="confirm(term)">
+          <button mat-icon-button matTooltip="Delete" (click)="confirm(contract.id, negotiation, index)">
             <mat-icon svgIcon="delete"></mat-icon>
           </button>
         </ng-template>
