--- a/libs/contract/src/lib/contract/list/external-sales/external-sales.component.html
+++ b/libs/contract/src/lib/contract/list/external-sales/external-sales.component.html
@@ -7,11 +7,11 @@
     <ng-template colRef="title" label="Title" let-title sort>
       {{ title | maxLength:50 }}
     </ng-template>
-    <ng-template colRef="price" label="Price" let-income>
-      <ng-container *ngIf="income?.price; else noPrice">
-        {{income.price | currency:income.currency}}
-      </ng-container>
-      <ng-template #noPrice>-</ng-template>
+    <ng-template colRef="totalIncome" label="Price" let-totalIncome sort>
+      <ng-container *ngIf="totalIncome.USD"> {{ totalIncome.USD | currency:'USD' }} </ng-container>
+      <ng-container *ngIf="totalIncome.USD && totalIncome.EUR"> and</ng-container>
+      <ng-container *ngIf="totalIncome.EUR"> {{ totalIncome.EUR | currency:'EUR' }} </ng-container>
+      <ng-container *ngIf="!totalIncome.USD && !totalIncome.EUR"> - </ng-container>
     </ng-template>
   </bf-table>
 </ng-container>
