small fixes & part of #9409

--- a/libs/contract/src/lib/avails/filter/filter.component.html
+++ b/libs/contract/src/lib/avails/filter/filter.component.html
@@ -22,7 +22,7 @@
     [formControl]="medias"
     [disabled]="disabled"
     scope="medias"
-    [withoutValues]="['Theatrical']"
+    [withoutValues]="['Theatrical Rights']"
     displayAll="All Rights"
     required
     placeholder="Specify right(s) to filter"
