--- a/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
+++ b/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
@@ -48,7 +48,7 @@
         <static-group 
           [formControl]="control.get('medias')"
           scope="medias"
-          [withoutValues]="['Theatrical']"
+          [withoutValues]="['Theatrical Rights']"
           displayAll="All Rights"
           required
           placeholder="Specify right(s) to filter"
