--- a/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
+++ b/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
@@ -45,8 +45,14 @@
       <h3>Holdback Rights*</h3>
       <mat-form-field appearance="outline">
         <mat-label>Select Rights</mat-label>
-        <static-group [formControl]="control.get('medias')" scope="medias" displayAll="All Rights" required
-          placeholder="Specify right(s) to filter" test-id="medias">
+        <static-group 
+          [formControl]="control.get('medias')"
+          scope="medias"
+          [withoutValues]="['Theatrical Rights']"
+          displayAll="All Rights"
+          required
+          placeholder="Specify right(s) to filter"
+          test-id="medias">
         </static-group>
         <mat-error groupError *ngIf="control.get('medias').hasError('required')">This field is required</mat-error>
       </mat-form-field>
