fix issue #9388 for catalog & festival : smaller headers

--- a/libs/movie/src/lib/movie/dashboard/actions/actions.component.html
+++ b/libs/movie/src/lib/movie/dashboard/actions/actions.component.html
@@ -12,7 +12,7 @@
     </button>
   </ng-container>
   <ng-template #actionsMenu>
-    <button class="align-bottom" mat-button [matMenuTriggerFor]="actionMenuMenu">
+    <button class="align-bottom main-dashboard-cta" mat-button [matMenuTriggerFor]="actionMenuMenu">
       <mat-icon svgIcon="more_horiz"></mat-icon>
       <span>Actions</span>
       <mat-icon svgIcon="arrow_drop_down"></mat-icon>
