--- a/apps/catalog/catalog/src/app/dashboard/title/view/view.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/view/view.component.html
@@ -1,17 +1,14 @@
 <title-dashboard-shell *ngIf="movie$ | async as movie" [routes]="navLinks" [editRoute]="['/c/o/dashboard/tunnel/movie', movie.id, 'main']">
   <movie-cta fxLayout="column" fxLayout.lt-md="row" fxLayoutAlign="space-between end" fxFlex>
-    <a mat-button color="primary" [routerLink]="['/c/o/dashboard/avails/select', movie.id, 'manage']" class="main-dashboard-cta">
-      Manage Avails
-    </a>
     <actions-dashboard-shell [movie]="movie" fxFlex #actions="actionsDashboardShell">
       <movie-action-menu>
         <a mat-menu-item [routerLink]="['/c/o/dashboard/tunnel/movie', movie.id]">
           <mat-icon svgIcon="edit"></mat-icon><span>Edit Title</span>
         </a>
         <ng-container *ngIf="movie.app.catalog.status !== 'archived'">
-          <a mat-menu-item [routerLink]="['/c/o/dashboard/avails', movie.id]">
+          <a mat-menu-item [routerLink]="['/c/o/dashboard/avails/select', movie.id, 'manage']">
             <mat-icon svgIcon="calendar_today"></mat-icon>
-            <span>Consult Avails</span>
+            <span>Manage Avails</span>
           </a>
         </ng-container>
         <a *ngIf="(org$ | async | canAccess: 'marketplace': 'catalog') && movie.app.catalog.status !== 'archived'" mat-menu-item [routerLink]="['/c/o/marketplace/title', movie.id, 'main']">
