--- a/libs/movie/src/lib/movie/dashboard/shell/shell.component.scss
+++ b/libs/movie/src/lib/movie/dashboard/shell/shell.component.scss
@@ -1,4 +1,4 @@
-nav.mat-tab-nav-bar {
+nav {
   margin: 8px 24px 32px;
 }
 
@@ -8,8 +8,10 @@ header {
 
   img {
     height: 100%;
-    max-height: 275px;
+    max-height: 125px;
     border-radius: 5px;
+    position: relative;
+    margin-right: 16px;
   }
 }
 
@@ -36,19 +38,9 @@ h4 {
 
 h1 {
   margin-bottom: 0;
+  font-size: 3rem;
 }
 
 h6 {
   margin-top: 8px;
-}
-
-.poster-container {
-  position: relative;
-  margin-right: 16px;
-
-  a {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-  }
 }
