--- a/apps/festival/festival/src/app/dashboard/title/view/view.component.html
+++ b/apps/festival/festival/src/app/dashboard/title/view/view.component.html
@@ -2,9 +2,9 @@
   <movie-cta fxLayout="column" fxLayout.lt-md="row" fxLayoutAlign="space-between end" fxFlex>
     <actions-dashboard-shell [movie]="movie" fxFlex #actions="actionsDashboardShell">
       <movie-action-menu>
-        <a *ngIf="(org$ | async | canAccess: 'marketplace': 'festival') && movie.app.festival.status !== 'archived'" mat-button color="primary" [routerLink]="['/c/o/marketplace/title', movie.id, 'main']" class="main-dashboard-cta">
-          <mat-icon svgIcon="visibility" color="primary"></mat-icon>
-          <span>Marketplace Preview</span>
+        <a mat-menu-item *ngIf="(org$ | async | canAccess: 'marketplace': 'festival') && movie.app.festival.status !== 'archived'"
+          [routerLink]="['/c/o/marketplace/title', movie.id, 'main']">
+          <mat-icon svgIcon="visibility"></mat-icon><span>Marketplace Preview</span>
         </a>
         <a mat-menu-item [routerLink]="['/c/o/dashboard/tunnel/movie', movie.id]">
           <mat-icon svgIcon="edit"></mat-icon><span>Edit Title</span>
