--- a/apps/crm/crm/src/app/crm/pages/import/import.component.html
+++ b/apps/crm/crm/src/app/crm/pages/import/import.component.html
@@ -8,8 +8,11 @@
   <a mat-button routerLink="orgs" routerLinkActive="mat-primary">
     <mat-icon svgIcon="group"></mat-icon><span matLine>Organizations</span>
   </a>
-  <a mat-button routerLink="contracts" routerLinkActive="mat-primary">
-    <mat-icon svgIcon="document"></mat-icon><span matLine>Contracts</span>
+  <a mat-button [routerLink]="['contracts', 'catalog']" routerLinkActive="mat-primary">
+    <mat-icon svgIcon="document"></mat-icon><span matLine>Archipel Content Contracts</span>
+  </a>
+  <a mat-button [routerLink]="['contracts', 'waterfall']" routerLinkActive="mat-primary">
+    <mat-icon svgIcon="document"></mat-icon><span matLine>Blockframes Contracts</span>
   </a>
   <a mat-button routerLink="imdb" routerLinkActive="mat-primary">
     <mat-icon svgIcon="movie"></mat-icon><span matLine>Imdb</span>
