--- a/apps/crm/crm/src/app/crm/pages/import/import.component.html
+++ b/apps/crm/crm/src/app/crm/pages/import/import.component.html
@@ -14,6 +14,9 @@
   <a mat-button [routerLink]="['contracts', 'waterfall']" routerLinkActive="mat-primary">
     <mat-icon svgIcon="document"></mat-icon><span matLine>Blockframes Contracts</span>
   </a>
+  <a mat-button routerLink="incomes" routerLinkActive="mat-primary">
+    <mat-icon svgIcon="EUR"></mat-icon><span matLine>Incomes</span>
+  </a>
   <a mat-button routerLink="imdb" routerLinkActive="mat-primary">
     <mat-icon svgIcon="movie"></mat-icon><span matLine>Imdb</span>
   </a>
