--- a/apps/waterfall/waterfall/src/app/dashboard/title/sales/sales.component.scss
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/sales/sales.component.scss
@@ -63,7 +63,7 @@ world-map {
       max-height: 360px;
       overflow-y: scroll;
       a {
-        margin: 24px 0px;
+        margin: 24px 8px 24px 0px;
       }
 
       ul li:not(:last-child) {
