--- a/apps/crm/crm/src/app/crm/pages/import/import.component.html
+++ b/apps/crm/crm/src/app/crm/pages/import/import.component.html
@@ -17,6 +17,9 @@
   <a mat-button routerLink="incomes" routerLinkActive="mat-primary">
     <mat-icon svgIcon="EUR"></mat-icon><span matLine>Incomes</span>
   </a>
+  <a mat-button routerLink="expenses" routerLinkActive="mat-primary">
+    <mat-icon svgIcon="EUR"></mat-icon><span matLine>Expenses</span>
+  </a>
   <a mat-button routerLink="imdb" routerLinkActive="mat-primary">
     <mat-icon svgIcon="movie"></mat-icon><span matLine>Imdb</span>
   </a>
