--- a/apps/crm/crm/src/app/crm/pages/import/import.component.html
+++ b/apps/crm/crm/src/app/crm/pages/import/import.component.html
@@ -8,11 +8,11 @@
   <a mat-button routerLink="orgs" routerLinkActive="mat-primary">
     <mat-icon svgIcon="group"></mat-icon><span matLine>Organizations</span>
   </a>
-  <a mat-button [routerLink]="['contracts', 'catalog']" routerLinkActive="mat-primary">
-    <mat-icon svgIcon="document"></mat-icon><span matLine>Archipel Content Contracts</span>
+  <a mat-button routerLink="contracts" routerLinkActive="mat-primary">
+    <mat-icon svgIcon="document"></mat-icon><span matLine>Contracts</span>
   </a>
-  <a mat-button [routerLink]="['contracts', 'waterfall']" routerLinkActive="mat-primary">
-    <mat-icon svgIcon="document"></mat-icon><span matLine>Blockframes Contracts</span>
+  <a mat-button routerLink="documents" routerLinkActive="mat-primary">
+    <mat-icon svgIcon="document"></mat-icon><span matLine>Documents</span>
   </a>
   <a mat-button routerLink="incomes" routerLinkActive="mat-primary">
     <mat-icon svgIcon="EUR"></mat-icon><span matLine>Incomes</span>
