--- a/libs/waterfall/src/lib/import/import.component.html
+++ b/libs/waterfall/src/lib/import/import.component.html
@@ -1,15 +1,15 @@
 
 <section fxLayout="column" fxLayoutAlign="center center">
-  <h1>Import multiple contracts at once</h1>
+  <h1>Import multiple documents at once</h1>
 
   <div fxLayout="column" fxLayoutAlign="center" fxLayoutGap="8px">
     <a
       color="primary"
       mat-stroked-button
-      download="import-contracts-template.xlsm"
-      [href]="templateUrl"
+      download="import-documents-template.xlsx"
+      href="/assets/templates/import-documents-template.xlsx"
     >
-      <mat-icon svgIcon="cloud_download"></mat-icon><span>Download our excel contracts template</span>
+      <mat-icon svgIcon="cloud_download"></mat-icon><span>Download our excel documents template</span>
     </a>
   </div>
 </section>
@@ -23,11 +23,11 @@
 <section class="file-section" fxLayout="column" fxLayoutAlign="center center">
 
   <ng-container *ngIf="!sheetTab; else ready">
-    <import-spreadsheet importType="contracts" (importEvent)="imported($event)"></import-spreadsheet>
+    <import-spreadsheet importType="documents" (importEvent)="imported($event)"></import-spreadsheet>
   </ng-container>
   <ng-template #ready>
-    <import-view-extracted-contracts [sheetTab]="sheetTab"></import-view-extracted-contracts>
-    <p>Please make sure everything is correct. Once you submit your contracts they will instantaneously appear on the platform.</p>
+    <import-view-extracted-documents [sheetTab]="sheetTab" ></import-view-extracted-documents>
+    <p>Please make sure everything is correct. Once you submit your documents they will instantaneously appear on the platform.</p>
     <button test-id="cancel-import" mat-stroked-button color="warn" (click)="cancel()">
       <mat-icon svgIcon="block"></mat-icon>
       <span>Cancel</span>
