--- a/apps/crm/crm/src/app/crm/pages/import/import.component.html
+++ b/apps/crm/crm/src/app/crm/pages/import/import.component.html
@@ -12,13 +12,13 @@
     <mat-icon svgIcon="document"></mat-icon><span matLine>Contracts</span>
   </a>
   <a mat-button routerLink="documents" routerLinkActive="mat-primary">
-    <mat-icon svgIcon="document"></mat-icon><span matLine>Documents</span>
+    <mat-icon svgIcon="document_signed"></mat-icon><span matLine>Documents</span>
   </a>
   <a mat-button routerLink="incomes" routerLinkActive="mat-primary">
-    <mat-icon svgIcon="EUR"></mat-icon><span matLine>Incomes</span>
+    <mat-icon svgIcon="monetization"></mat-icon><span matLine>Incomes</span>
   </a>
   <a mat-button routerLink="expenses" routerLinkActive="mat-primary">
-    <mat-icon svgIcon="EUR"></mat-icon><span matLine>Expenses</span>
+    <mat-icon svgIcon="monetization"></mat-icon><span matLine>Expenses</span>
   </a>
   <a mat-button routerLink="imdb" routerLinkActive="mat-primary">
     <mat-icon svgIcon="movie"></mat-icon><span matLine>Imdb</span>
