--- a/apps/crm/crm/src/app/dashboard/toolbar-top/toolbar-top.component.html
+++ b/apps/crm/crm/src/app/dashboard/toolbar-top/toolbar-top.component.html
@@ -28,6 +28,10 @@
     <mat-icon svgIcon="document"></mat-icon><span matLine>Offers</span>
   </a>
 
+  <a mat-button routerLink="/c/o/dashboard/crm/waterfalls">
+    <mat-icon svgIcon="monetization"></mat-icon><span matLine>Waterfalls</span>
+  </a>
+
   <a mat-button routerLink="/c/o/dashboard/crm/import">
     <mat-icon svgIcon="excel"></mat-icon><span matLine>Import</span>
   </a>
