--- a/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
@@ -28,10 +28,7 @@
         {{ saleCount || '-' }}
       </ng-template>
       <ng-template colRef="totalIncome" label="total gross receipt" let-totalIncome sort>
-        <ng-container *ngIf="totalIncome.USD"> {{ totalIncome.USD | currency:'USD' }} </ng-container>
-        <ng-container *ngIf="totalIncome.USD && totalIncome.EUR"> and</ng-container>
-        <ng-container *ngIf="totalIncome.EUR"> {{ totalIncome.EUR | currency:'EUR' }} </ng-container>
-        <ng-container *ngIf="!totalIncome.USD && !totalIncome.EUR"> - </ng-container>
+        <price-per-currency [price]="totalIncome"></price-per-currency>
       </ng-template>
       <ng-template colRef="id" label="actions" let-id sticky>
         <div fxLayout fxLayoutGap="16px" *ngIf="queryParams$ | async as queryParams">
