--- a/libs/contract/src/lib/contract/list/external-sales/external-sales.component.html
+++ b/libs/contract/src/lib/contract/list/external-sales/external-sales.component.html
@@ -8,10 +8,7 @@
       {{ title | maxLength:50 }}
     </ng-template>
     <ng-template colRef="totalIncome" label="Price" let-totalIncome sort>
-      <ng-container *ngIf="totalIncome.USD"> {{ totalIncome.USD | currency:'USD' }} </ng-container>
-      <ng-container *ngIf="totalIncome.USD && totalIncome.EUR"> and</ng-container>
-      <ng-container *ngIf="totalIncome.EUR"> {{ totalIncome.EUR | currency:'EUR' }} </ng-container>
-      <ng-container *ngIf="!totalIncome.USD && !totalIncome.EUR"> - </ng-container>
+      <price-per-currency [price]="totalIncome"></price-per-currency>
     </ng-template>
   </bf-table>
 </ng-container>
